firefox-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: firefox-pod
spec:
  containers:
  - name: firefox
    image: lscr.io/linuxserver/firefox:latest
    ports:
      - containerPort: 3001
