network_policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-pod-policy
spec:
 podSelector:
   matchLabels:
     app: nginx
 ingress:
   - ports:
     - port: 80
